# spreadtrum-flash-android

./: .gitattributes  .gitignore  APK_BUILD_REPORT.md  BUILD_STATUS.md  CONTRIBUTING.md  PORTING_NOTES.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  UPSTREAM_UPDATE.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts  upstream.lock.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_hooks.h  native_bridge.c
app/src/main/java/io/github/lootdev78/spdflash/: CommandCatalog.kt  CommandLineParser.kt  CommandQueueAdapter.kt  CommandValidator.kt  FlashKeepAliveService.kt  FlashModels.kt  FlashViewModel.kt  HashUtils.kt  MainActivity.kt  NativeBridge.kt  NativeResult.kt  PipelinePreflight.kt  ProgressParser.kt  QueueStore.kt  SafOutputRouter.kt  SizeParser.kt  SpdFlashApplication.kt  UriFileName.kt  UsbCoordinator.kt  UsbKickTransport.kt
app/src/main/res/drawable/: ic_app.xml  ic_clear.xml  ic_copy.xml  ic_dashboard.xml  ic_delete.xml  ic_down.xml  ic_export.xml  ic_file.xml  ic_folder.xml  ic_loader.xml  ic_operations.xml  ic_play.xml  ic_queue.xml  ic_refresh.xml  ic_search.xml  ic_stop.xml  ic_terminal.xml  ic_up.xml  ic_usb.xml  status_dot_off.xml  status_dot_on.xml
app/src/main/res/layout/: activity_main.xml  item_command.xml  screen_commands.xml  screen_console.xml  screen_dashboard.xml  screen_loaders.xml  screen_queue.xml
app/src/main/res/layout-sw600dp/: activity_main.xml
app/src/main/res/menu/: menu_bottom.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: device_filter.xml  file_paths.xml
app/src/test/java/io/github/lootdev78/spdflash/: CommandLineParserTest.kt  CommandValidatorTest.kt  NativeResultTest.kt  PipelinePreflightTest.kt  ProgressParserTest.kt  SizeParserTest.kt
gradle/: upstream-update.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
tools/: check_kotlin_syntax.kts  verify_project.py
